examples/kustomize/gateway-vote-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  ports:
    - name: http
      port: 80
